# dbc2parquet

./: CMakeLists.txt  ERSC2504.dbc  Makefile  README.md
src/: blast.c  dbf_reader.c  dbf_reader.cpp  dbf_reader.h  dbf_reader.hpp  main.c  main.cpp  parquet_write.c  parquet_write.cpp  parquet_write.h  parquet_write.hpp
